# music-sheet-flow

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  midi_engine.cpp  midi_engine.h  pitch_detector.cpp  pitch_detector.h
app/src/main/cpp/stubs/: aubio_stub.cpp
app/src/main/kotlin/net/tigr/musicsheetflow/: MusicSheetFlowApp.kt
app/src/main/kotlin/net/tigr/musicsheetflow/audio/: NativeAudioEngine.kt  NativeMidiEngine.kt
app/src/main/kotlin/net/tigr/musicsheetflow/di/: AppModule.kt
app/src/main/kotlin/net/tigr/musicsheetflow/playback/: ScorePlayer.kt
app/src/main/kotlin/net/tigr/musicsheetflow/score/: ScoreRepository.kt
app/src/main/kotlin/net/tigr/musicsheetflow/score/model/: Score.kt
app/src/main/kotlin/net/tigr/musicsheetflow/score/parser/: MusicXmlParser.kt
app/src/main/kotlin/net/tigr/musicsheetflow/tracking/: BeatClock.kt  NoteMatcher.kt  PositionTracker.kt
app/src/main/kotlin/net/tigr/musicsheetflow/ui/: LibraryScreen.kt  MainActivity.kt
app/src/main/kotlin/net/tigr/musicsheetflow/ui/score/: SMuFLGlyphs.kt  ScoreRenderer.kt
app/src/main/kotlin/net/tigr/musicsheetflow/ui/theme/: Theme.kt
app/src/main/kotlin/net/tigr/musicsheetflow/util/: NoteNaming.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
doc/: ARCHITECTURE.md
scripts/: download_dependencies.sh
